# greentiger

./: .gitignore  .gitmodules
android_app/: gradle.properties  settings.gradle.kts
android_app/app/: build.gradle.kts
android_app/app/src/main/: AndroidManifest.xml
android_app/app/src/main/cpp/: CMakeLists.txt  vnc_jni.cpp
android_app/app/src/main/java/com/hengqutiandi/vncviewer/: DisplayActivity.kt  MainActivity.kt  MonitorLayoutHelper.kt  MouseSafeActivity.kt  SshConfigAdapters.kt  TouchScrollConfig.kt  ViewerLaunchIntents.kt  ViewerMultiWindowStore.kt  VncInputUtils.kt
android_app/app/src/main/java/com/hengqutiandi/vncviewer/data/: ConnectionsRepository.kt
android_app/app/src/main/java/com/hengqutiandi/vncviewer/model/: ConnectionItem.kt
android_app/app/src/main/java/com/hengqutiandi/vncviewer/native/: VncNative.kt
android_app/app/src/main/java/com/hengqutiandi/vncviewer/ui/theme/: Color.kt  Theme.kt  Type.kt
android_app/app/src/main/res/values/: strings.xml  themes.xml
build_tools/gnutls/android/: build.sh
build_tools/gnutls/ohos/: build.sh
docs/: arkui-builder-refresh-pitfalls.md  connection-management-ux-guidelines.md  privacy-policy.md  ssh-tunnel-integration-report.md  user-agreement.md  viewer-ux-guidelines.md
ohos_app/: build-profile.json5  hvigor.d.ts  hvigorfile.ts  oh-package.json5  ohos_apis.d.ts
ohos_app/AppScope/: app.json5
ohos_app/entry/: build-profile.json5  hvigorfile.ts  oh-package-lock.json5  oh-package.json5
ohos_app/entry/src/main/: module.json5
ohos_app/entry/src/main/cpp/: CMakeLists.txt  napi_vnc.cpp
ohos_app/entry/src/main/cpp/types/libvncviewer/: index.d.ts  oh-package.json5
ohos_app/entry/src/main/ets/displayability/: DisplayAbility.ets
ohos_app/entry/src/main/ets/entryability/: EntryAbility.ets
ohos_app/entry/src/main/ets/pages/: DisplayPage.ets  Index.ets  Viewer.ets
ohos_app/entry/src/main/ets/utils/: ConnectionUtils.ets  KeyMap.ets  ViewerCommonUtils.ets  ViewerMultiWindow.ets
ohos_app/entry/src/main/ets/viewerability/: ViewerAbility.ets
ohos_app/entry/src/main/resources/base/element/: string.json
ohos_app/entry/src/main/resources/base/profile/: main_pages.json
ohos_app/entry/src/main/resources/en_US/element/: string.json
ohos_app/entry/src/main/resources/zh_CN/element/: string.json
scripts/: build_all.sh  hvigorw-ohos.sh  sync_agreements.py
shared_native/: CMakeLists.txt  monitor_segmentation.cpp  monitor_segmentation.h  ssh_tunnel.cpp  ssh_tunnel.h  vncclient.cpp  vncclient.h
